--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,5 +1,54 @@
+:root {
+  --branding-color: #6d8df5;
+  --primary-color: #241d3f;
+  --secondary-color: #c6deee;
+  --btn-font-color: #fff;
+  --heading-font-family: "Blinker", sans-serif;
+  --default-font-family: "Playfair Display", serif;
+}
+
+body {
+  font-family: var(--default-font-family);
+  color: var(--primary-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
+  font-weight: 600;
+}
+
 h1 {
-  font-family: "Blinker", sans-serif;
-  color: #241d3f;
-  background: #afeeee;
+  font-size: 96px;
+}
+
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 0;
+}
+
+.hero h2 {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+
+.hero p {
+  font-size: 32px;
+  font-weight: 500;
+  margin: 0;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: var(--btn-font-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
