--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -20,10 +20,22 @@ h5,
 h6 {
   font-family: var(--heading-font-family);
   font-weight: 600;
+  text-align: center;
 }
 
 h1 {
   font-size: 96px;
+  line-height: 1.5;
+}
+
+h2 {
+  font-size: 64px;
+}
+
+p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .hero {
@@ -35,7 +47,7 @@ h1 {
 .hero h2 {
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
 }
 
 .hero p {
@@ -51,4 +63,37 @@ h1 {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 960px) {
+  .hero {
+    padding: 80px 20px;
+  }
+
+  h1 {
+    font-size: 55px;
+    line-height: 2;
+  }
+
+  h2 {
+    font-size: 45px;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
