adjustments on pages layout

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,5 +1,5 @@
 :root {
-  --branding-color: #6d8df5;
+  --branding-color: #b9c7f1;
   --primary-color: #241d3f;
   --secondary-color: radial-gradient(
     circle at 10% 20%,
@@ -19,6 +19,7 @@ body {
   max-width: 1400px;
   display: block;
   margin: 0 auto;
+  background: #f1efef;
 }
 
 h1,
@@ -33,17 +34,17 @@ h6 {
 }
 
 h1 {
-  font-size: 96px;
+  font-size: 76px;
   line-height: 1.5;
 }
 
 h2 {
-  font-size: 64px;
+  font-size: 50px;
 }
 
 p {
   font-weight: normal;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 30px;
 }
 
@@ -76,6 +77,7 @@ p {
 
 .btn-branding-outline {
   color: var(--branding-color);
+  background: #fff;
   border: 1px solid var(--branding-color);
   border-radius: 4px;
   font-size: 18px;
@@ -102,7 +104,7 @@ p {
   }
 
   h2 {
-    font-size: 45px;
+    font-size: 40px;
   }
 
   .project-description {
@@ -115,4 +117,17 @@ p {
   background: var(--secondary-color);
   text-align: center;
   padding: 80px 0;
+}
+
+footer {
+  background: var(--secondary-color);
+  margin-top: 90px;
+  padding: 30px;
+  text-align: center;
+}
+
+.socialmedia-icons {
+  text-align: center;
+  padding: 40px 0;
+  margin: auto;
 }
