--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -46,6 +46,7 @@ h5 {
 
 .center {
   margin: 0 auto;
+  text-align: center;
 }
 
 .introduction {
@@ -225,6 +226,10 @@ p {
     padding: 0;
     text-align: center;
   }
+}
+
+.sub-hero {
+  padding: 140px 0;
 }
 
 .about-me-hero {
