--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -44,6 +44,11 @@ h5 {
   color: var(--primary-color);
 }
 
+h6 a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
 .center {
   margin: 0 auto;
   text-align: center;
@@ -146,6 +151,17 @@ p {
   padding: 15px 30px;
 }
 
+.btn-branding:hover {
+  color: var(--branding-color);
+  background: #fff;
+  border: 1px solid var(--branding-color);
+}
+
+.btn-branding-outline:hover {
+  background: var(--branding-color);
+  color: var(--btn-font-color);
+}
+
 .arrow,
 .arrow:before {
   position: absolute;
@@ -210,7 +226,7 @@ p {
 }
 @media (max-width: 960px) {
   .hero {
-    padding: 80px 20px;
+    padding: 100px 20px;
   }
 
   h1 {
@@ -229,13 +245,60 @@ p {
 }
 
 .sub-hero {
-  padding: 140px 0;
+  padding: 20px 0;
 }
 
-.about-me-hero {
+.about-me-hero,
+.projects-hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 80px 0;
+  padding: 85px 0;
+}
+
+.about-me {
+  color: var(--primary-color);
+}
+
+h3 {
+  font-size: 80px;
+  text-align: center;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  margin: 0;
+  position: relative;
+  color: var(--branding-color);
+}
+
+h3:before {
+  content: attr(data-text);
+  position: absolute;
+  background: var(--primary-color);
+  -webkit-background-clip: text;
+  color: transparent;
+  background-size: 80% 70%;
+  line-height: 0.9;
+  clip-path: ellipse(120px 120px at -2.54% -9.25%);
+  animation: swing 5s infinite;
+  animation-direction: alternate;
+}
+
+@keyframes swing {
+  0% {
+    -webkit-clip-path: ellipse(120px 120px at -2.54% -9.25%);
+    clip-path: ellipse(120px 120px at -2.54% -9.25%);
+  }
+  50% {
+    -webkit-clip-path: ellipse(120px 120px at 49.66% 64.36%);
+    clip-path: ellipse(120px 120px at 49.66% 64.36%);
+  }
+  100% {
+    -webkit-clip-path: ellipse(120px 120px at 102.62% -1.61%);
+    clip-path: ellipse(120px 120px at 102.62% -1.61%);
+  }
 }
 
 .project-carousel {
