--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,15 +1,32 @@
 :root {
-  --branding-color: #b9c7f1;
+  --branding-color: #cfd9fa;
   --primary-color: #241d3f;
+  --header-footer-text: #ffff;
   --secondary-color: radial-gradient(
     circle at 10% 20%,
     rgba(91, 173, 254, 0.46) 0%,
     rgba(91, 224, 254, 0.46) 47.2%,
     rgba(170, 254, 235, 0.43) 90%
   );
+  --background-color: #000000;
+  --background-image: radial-gradient(
+      white,
+      rgba(255, 255, 255, 0.2) 2px,
+      transparent 15px
+    ),
+    radial-gradient(white, rgba(255, 255, 255, 0.15) 1px, transparent 10px),
+    radial-gradient(white, rgba(255, 255, 255, 0.1) 2px, transparent 15px),
+    radial-gradient(
+      rgba(255, 255, 255, 0.4),
+      rgba(255, 255, 255, 0.1) 2px,
+      transparent 10px
+    );
+  --background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+  --background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   --btn-font-color: #fff;
   --heading-font-family: "Blinker", sans-serif;
   --default-font-family: "Playfair Display", serif;
+  --default-interests-color: #d8effa;
 }
 
 body {
@@ -46,11 +63,7 @@ h5 {
 
 h6 a {
   text-decoration: none;
-  color: var(--primary-color);
-}
-
-p {
-  font-size: 25px;
+  color: var(--branding-color);
 }
 
 .center {
@@ -114,14 +127,14 @@ p {
 
 p {
   font-weight: normal;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 30px;
 }
 
-.hero {
-  background: var(--secondary-color);
-  text-align: center;
-  padding: 250px 0;
+.hero p {
+  font-size: 36px;
+  font-weight: 500;
+  margin: 0;
 }
 
 .hero h2 {
@@ -130,10 +143,60 @@ p {
   line-height: 1.5;
 }
 
-.hero p {
-  font-size: 32px;
-  font-weight: 500;
-  margin: 0;
+.hero {
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: var(--background-size);
+  background-position: var(--background-position);
+  color: var(--branding-color);
+  text-align: center;
+  padding: 250px 0;
+}
+
+.contact-hero {
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: var(--background-size);
+  background-position: var(--background-position);
+  color: var(--branding-color);
+  text-align: center;
+  padding: 80px 0;
+}
+
+.sub-hero {
+  padding: 20px 0;
+}
+
+.about-me-hero,
+.projects-hero {
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: var(--background-size);
+  background-position: var(--background-position);
+  color: var(--branding-color);
+  text-align: center;
+  padding: 85px 0;
+}
+
+.contact-hero {
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: var(--background-size);
+  background-position: var(--background-position);
+  color: var(--branding-color);
+  text-align: center;
+  padding: 80px 0;
+}
+
+footer {
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: var(--background-size);
+  background-position: var(--background-position);
+  color: var(--branding-color);
+  margin-top: 90px;
+  padding: 30px;
+  text-align: center;
 }
 
 .btn-branding {
@@ -146,9 +209,8 @@ p {
 }
 
 .btn-branding-outline {
-  color: var(--branding-color);
-  background: #fff;
-  border: 1px solid var(--branding-color);
+  color: var(--btn-font-color);
+  background: var(--primary-color);
   border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
@@ -181,8 +243,8 @@ p {
   transform: rotate(45deg);
   border-left: none;
   border-top: none;
-  border-right: 2px var(--primary-color) solid;
-  border-bottom: 2px var(--primary-color) solid;
+  border-right: 2px var(--branding-color) solid;
+  border-bottom: 2px var(--branding-color) solid;
 }
 
 .arrow:before {
@@ -193,8 +255,8 @@ p {
   margin: -10px 0 0 -10px;
   border-left: none;
   border-top: none;
-  border-right: 1px var(--primary-color) solid;
-  border-bottom: 1px var(--primary-color) solid;
+  border-right: 1px var(--branding-color) solid;
+  border-bottom: 1px var(--branding-color) solid;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-name: arrow;
@@ -224,11 +286,11 @@ p {
   padding: 120px 60px;
 }
 
-#luisa {
-  display: flex;
-  justify-content: right;
-  max-width: 350px;
-  padding: 50px;
+.luisa {
+  display: block;
+  margin: 0 auto;
+  max-width: 400px;
+  padding: 30px;
 }
 
 @media (max-width: 960px) {
@@ -251,32 +313,27 @@ p {
   }
 }
 
-.sub-hero {
-  padding: 20px 0;
-}
-
-.about-me-hero,
-.projects-hero {
-  background: var(--secondary-color);
-  text-align: center;
-  padding: 85px 0;
-}
-
 .about-me-hero h1 {
   padding: 50px 25px 15px 25px;
 }
 
 .about-me-hero p {
-  padding: 0 80px 30px 80px;
+  padding: 0 20px 30px 70px;
 }
 
-.about-me {
-  color: var(--primary-color);
-}
-
+.interests-hero,
+.cert-hero,
 .skills-competencies {
-  max-width: 1000px;
+  padding: 55px;
+  background: var(--branding-color);
+  max-width: 1100px;
   margin: 0 auto;
+  border-radius: 5px;
+  border: solid 2px var(--primary-color);
+}
+
+ul {
+  list-style-type: none;
 }
 
 h3 {
@@ -290,13 +347,13 @@ h3 {
   justify-content: center;
   margin: 0;
   position: relative;
-  color: var(--branding-color);
+  color: var(--primary-color);
 }
 
 h3:before {
   content: attr(data-text);
   position: absolute;
-  background: var(--primary-color);
+  background: var(--branding-color);
   -webkit-background-clip: text;
   color: transparent;
   background-size: 80% 70%;
@@ -336,19 +393,6 @@ h3:before {
   right: 40px;
 }
 
-.contact-hero {
-  background: var(--secondary-color);
-  text-align: center;
-  padding: 80px 0;
-}
-
-footer {
-  background: var(--secondary-color);
-  margin-top: 90px;
-  padding: 30px;
-  text-align: center;
-}
-
 .socialmedia-icons {
   text-align: center;
   padding: 40px 0;
@@ -358,6 +402,7 @@ footer {
   color: #fff;
 }
 
+a,
 .contact-link {
   text-decoration: none;
   color: var(--primary-color);
