--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -167,8 +167,7 @@ p {
   padding: 20px 0;
 }
 
-.about-me-hero,
-.projects-hero {
+.about-me-hero {
   background-color: var(--background-color);
   background-image: var(--background-image);
   background-size: var(--background-size);
@@ -178,14 +177,15 @@ p {
   padding: 85px 0;
 }
 
-.contact-hero {
+.contact-hero,
+.projects-hero {
   background-color: var(--background-color);
   background-image: var(--background-image);
   background-size: var(--background-size);
   background-position: var(--background-position);
   color: var(--branding-color);
   text-align: center;
-  padding: 80px 0;
+  padding: 90px 0;
 }
 
 footer {
