--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -382,9 +382,9 @@ h3:before {
   display: block;
   margin: 0 auto;
   max-width: 700px;
-  border: 5px;
-  border-color: var(--branding-color);
-  box-shadow: var(--box-shadow-white);
+  border: solid 4px;
+  border-color: #fff;
+  box-shadow: #241d3f63 6px 12px 12px 6px;
 }
 
 #project-img {
