--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -164,7 +164,8 @@ p {
 }
 
 .sub-hero {
-  padding: 20px 0;
+  padding: 0;
+  margin-top: 100px;
 }
 
 .about-me-hero {
@@ -185,7 +186,11 @@ p {
   background-position: var(--background-position);
   color: var(--branding-color);
   text-align: center;
-  padding: 90px 0;
+  padding: 100px 0;
+}
+
+.connected {
+  padding-top: 50px;
 }
 
 footer {
@@ -194,8 +199,8 @@ footer {
   background-size: var(--background-size);
   background-position: var(--background-position);
   color: var(--branding-color);
-  margin-top: 90px;
-  padding: 30px;
+  margin-top: 80px;
+  padding: 70px;
   text-align: center;
 }
 
@@ -398,12 +403,6 @@ h3:before {
 #project-img {
   box-shadow: #241d3f63 6px 12px 12px 6px;
   border-radius: 5px;
-}
-
-.samba-title {
-  text-align: left;
-  position: relative;
-  right: 40px;
 }
 
 .socialmedia-icons {
