--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -161,6 +161,11 @@ p {
   padding-bottom: 50px;
 }
 
+.form-control {
+  border: solid 2px var(--branding-color);
+  box-shadow: #241d3f4f 2px 3px 3px 2px;
+}
+
 .sub-hero {
   padding: 0;
   margin-top: 100px;
@@ -209,6 +214,7 @@ footer {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  box-shadow: #241d3f63 2px 4px 4px 2px;
 }
 
 .btn-branding-outline {
@@ -218,6 +224,7 @@ footer {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  box-shadow: #241d3f63 2px 4px 4px 2px;
 }
 
 .btn-branding:hover {
@@ -416,12 +423,6 @@ a,
 .contact-link {
   text-decoration: none;
   color: var(--primary-color);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 .nav {
