--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -348,6 +348,13 @@ footer {
   margin: 0 auto;
   border-radius: 5px;
   border: solid 2px var(--primary-color);
+  box-shadow: #241d3f4f 2px 3px 3px 2px;
+}
+
+.flex-wrapper {
+  display: flex;
+  justify-content: center;
+  text-align: left;
 }
 
 ul {
