Added React certificate and projects
also updated about me to reflect completion of my SheCodes Pro course

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -285,6 +285,7 @@ footer {
 .img-fluid {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
+  max-width: 85%;
 }
 
 .img-fluid:hover {
